# geotutor-ai

./: .gitignore  DEPLOYMENT.md  ENV_VARS.md  Procfile  SUMMARY.md  TESTING.md  VERCEL_CLI_DEPLOY.md  crop_logo.py  debug_imports.py  fix_dialog_indent.py  fix_duplicate.py  fix_sidebar.py  fix_sidebar_indent.py  interactive_tester.py  main.py  package.json  pyproject.toml  requirements.txt  test_consensus.py  test_features.py  test_output.txt  test_system.py  vercel.json
brain_api/: README.md  __init__.py  chromadb_loader.py  main.py  railway.json  requirements.txt  start.bat
chroma_db/3742fe67-5a33-48fb-afef-274042f5a359/: index_metadata.pickle
geotech_llm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
geotutor/: QUICK_START.md  nixpacks.toml  package.json  todo.md  vercel.json  vite.config.ts
geotutor/client/: .env.example  index.html
geotutor/client/src/: App.tsx  const.ts  index.css
geotutor/drizzle/: 0001_wandering_juggernaut.sql  0002_chubby_triathlon.sql  0003_wide_silk_fever.sql  schema.ts
geotutor/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  _journal.json
geotutor/server/: db.ts  documents.test.ts  qa.test.ts  routers.ts
outputs/: Generated_Exam.docx  mindmap_1765374573.mmd
src/: Utils_initializingLLM.py  __init__.py  graph.py  ingest.py  schemas.py
src/agents/: __init__.py  analyst.py  chair.py  consensus.py  critic.py  engineer.py  exam_council.py  librarian.py  utils.py
src/tools/: __init__.py  calculator.py  formatter.py  reporter.py  reranker.py  visual_generator.py  visualizer.py
(+13 files in other folders)
